<resources>
    <string name="app_name">PathFinder</string>
    <string name="app_name_long">Project Pathfinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_trip_menu">TripMenu</string>
    <string name="title_activity_poi_menu">PoiMenu</string>
    <string name="title_activity_poi_detail_base">PoiDetailBaseActivity</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="title_activity_main7">Main7Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_trip_viewing">TripViewingActivity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="title_activity_poi_detail">PoiDetailActivity</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="error_generic">An error occurred</string>
    <string name="error_network_no_connection">Error: no network connection. Check your settings and try again.</string>
    <string name="error_login_failed">Error: login unsuccessful</string>
    <string name="error_connection_generic">An error occurred while retrieving your data. Try again later</string>
    <string name="error_database_download_generic">An error occurred while retrieving your data. Try again later</string>
    <string name="error_database_upload_generic">An error occurred while downloading your data. Try again later</string>
    <string name="trip_add_error_message">An error occurred while creating your trip. Try again later</string>
    <string name="trip_add_success_message">Trip created successfully</string>
    <string name="trip_edit_error_message">An error occurred while updating your trip. Try again later</string>
    <string name="trip_edit_success_message">Trip updated successfully</string>
    <string name="trip_delete_error_message">An error occurred while deleting this trip. Try again later</string>
    <string name="trip_delete_success_message">Trip deleted</string>
    <string name="poi_add_error_message">An error occurred while creating your attraction. Try again later</string>
    <string name="poi_add_success_message">Attraction created successfully</string>
    <string name="main_menu_label_pois">Manage attractions</string>
    <string name="main_menu_label_trip_created">Your trips</string>
    <string name="main_menu_label_trip_favorites">Saved trips</string>
    <string name="main_menu_label_trip_recommended">Recommended trips</string>
    <string name="main_menu_message_welcome">Welcome, %1$s</string>
    <string name="direction_walk">Walk</string>
    <string name="poi_favorite_added">Added to favorites</string>
    <string name="poi_favorite_removed">Removed from favorites</string>
    <string name="poi_picker_selected_info">Currently selected</string>
    <string name="poi_picker_selected_none">None</string>
    <string name="poi_picker_button_repick">Search</string>
    <string name="poi_picker_button_view">Views</string>
    <string name="poi_picker_button_select">Select</string>
    <string-array name="poi_menu_tabs">
        <item>Created</item>
        <item>Saved</item>
        
        <item>Search</item>
    </string-array>
    <string name="ipsum">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, pellentesque eget, bibendum a, gravida ullamcorper quam. Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus. Sed vel lectus. Ut sagittis, ipsum dolor quam.</string>
    <string name="hello_blank_fragment">This fragment unintentionally left blank</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_trip_edit">TripEditActivity</string>
</resources>