<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="pl.lodz.p.pathfinder.view.PoiSearchFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/poi_picker_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/poi_picker_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poi_picker_selected_info"/>

            <TextView
                android:id="@+id/poi_search_selected_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Name"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/poi_search_selected_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/poi_picker_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <Button
                android:id="@+id/poi_picker_button_pickagain"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_redo_black_24dp"
                android:text="@string/poi_picker_button_repick"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poi_picker_action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/poi_picker_action_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/poi_picker_button_select"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
